[project]
name = "mev-commit-sdk-py"
version = "0.1.0"
description = "mev-commit python sdk for on-chain data retrieval"
authors = [{ name = "Evan K", email = "evan@primev.xyz" }]
dependencies = [
    "polars>=0.20.22",
    "hvplot>=0.9.2",
    "pyarrow>=16.0.0",
    "cryo @ https://github.com/primev/cryo/raw/main/wheels/cryo-0.3.2-cp310-cp310-manylinux_2_34_x86_64.whl",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mev_commit_sdk_py"]
